[package]
name = "private-currency"
version = "0.1.0"
authors = ["Alex Ostrovski <ostrovski.alex@gmail.com>"]

[dependencies]
exonum = "=0.9.4"
exonum_sodiumoxide = "0.0.20"
bulletproofs = "=1.0.0-pre.0"
curve25519-dalek = "=1.0.0-pre.0"
merlin = "=1.0.0-pre.0"
rand = "0.5.0"
lazy_static = "1.0"
byteorder = "1.2.7"
failure = "=0.1.3"
failure_derive = "=0.1.3"
serde = "1.0"
serde_derive = "1.0"

[dev-dependencies]
exonum-testkit = "0.9.2"
reqwest = "0.9.5"
log = "=0.4.3"
tempdir = "0.3.7"